# namban

./: README.md
.github/workflows/: parch-git-mirror.yml
package/archlinux/: PKGBUILD
package/debian/: build.sh
package/files/rootfs/usr/lib/namban/: namban-emergency-rollback
package/files/rootfs/usr/lib/systemd/system/: namban-safety-check.service  namban-safety-check.timer
src/: dns_manager.py  main.py  main_window.py  models.py  profile_manager.py  proxy_manager.py  pyproject.toml  ui_components.py
src/core/: action_history.py  daemon.py  dns_actions.py  fs_manager.py  toolbox.py
src/nambancore/: actions.py
