[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "namban-dns"
version = "2.0.0"
description = "A modern GTK4/Adwaita DNS management application with DoH support"
authors = [
    {name = "Ali Gholipour"},
    {name = "Hussein Eslami"},
    {name = "Sohrab Behdani"},
    {name = "Meshya"},
    {name = "ARS101"},
]
license = {text = "GPL-3.0"}
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: GTK",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Networking",
    "Topic :: System :: Systems Administration",
]
keywords = ["dns", "networking", "gtk4", "adwaita", "linux", "systemd"]

dependencies = [
    # Core GTK/GI bindings
    "PyGObject>=3.46.0",
    
    # System integration
    "psutil>=5.9.0",
    "systemd-python>=235",
    
    # Configuration and data handling
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    
    # Network utilities
    "dnspython>=2.4.0",
    "requests>=2.31.0",
    "validators>=0.22.0",
    
    # Logging and monitoring
    "structlog>=23.1.0",
    "rich>=13.0.0",
    
    # Desktop integration (KDE/GNOME)
    "dbus-python>=1.3.2",
    "jeepney>=0.8.0",  # Alternative D-Bus library
    
    # Configuration file handling
    "tomli>=2.0.0; python_version < '3.11'",
    "tomli-w>=1.0.0",
    
    # Additional utilities
    "click>=8.0.0",  # For potential CLI interface
    "platformdirs>=3.0.0",  # Cross-platform config directories
]

[project.optional-dependencies]
dev = [
    # Development tools
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    
    # Documentation
    "sphinx>=7.0.0",
    "sphinx-rtd-theme>=1.3.0",
    
    # Type stubs
    "types-requests>=2.31.0",
    "types-psutil>=5.9.0",
]

testing = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
]

packaging = [
    "build>=0.10.0",
    "wheel>=0.41.0",
    "twine>=4.0.0",
]


[project.urls]
Homepage = "https://github.com/parchlinuxB/namban"
Documentation = "https://github.com/parchlinuxB/namban#readme"
Repository = "https://github.com/parchlinuxB/namban.git"
"Bug Tracker" = "https://github.com/parchlinuxB/namban/issues"

[project.scripts]
namban = "namban.main:main"
namban-cli = "namban.cli:main"

[project.gui-scripts]
namban-gui = "namban.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/namban"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/package",
    "/README.md",
    "/LICENSE",
    "/namban.svg",
]

# Black configuration
[tool.black]
line-length = 88
target-version = ['py310']
include = '\.pyi?$'
extend-exclude = '''
/(
    \.git
  | \.venv
  | build
  | dist
)/
'''

# isort configuration
[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# Coverage configuration
[tool.coverage.run]
source = ["src/namban"]
omit = [
    "*/tests/*",
    "*/test_*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
